--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -173,3 +173,31 @@ a:active {
         }
     }
 }
+
+#brands{
+  width: 100%;
+  height: 360px;
+  display: table;
+  & > div{
+    display: table-row;
+    height: 180px;
+    & > div{
+      width: 20%;
+      display: table-cell;
+      border-right: 1px solid rgb(227, 227, 227);
+      border-bottom: 1px solid rgb(227, 227, 227);
+      text-align: center;
+      vertical-align: middle;
+      &:last-child{
+        display: table-cell;
+        border-right: 0px;
+      }
+      img{
+        width: 200px;
+      }
+    }
+    &:last-child > div{
+      border-bottom: 0;
+    }
+  }
+}
