--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -12,6 +12,14 @@ body {
     font-size: 14px;
 }
 
+.grey-background {
+    background-color: rgb(247, 247, 247);
+}
+
+.white-background {
+    background-color: rgb(255, 255, 255);
+}
+
 .btn-transparent {
     color: #fff;
     background-color: transparent;
@@ -34,6 +42,32 @@ body {
 
         a {
             color: #000;
+        }
+    }
+}
+
+.btn-transparent-violet {
+    color: #9F87D2;
+    background-color: transparent;
+    border-color: #9F87D2;
+    transition: 400ms;
+
+    a {
+        color: #9F87D2;
+    }
+
+    a:active,
+    a:hover,
+    a:visited {
+        text-decoration: none;
+    }
+
+    &:hover {
+        background-color: #9F87D2;
+        color: #fff;
+
+        a {
+            color: #fff;
         }
     }
 }
@@ -174,30 +208,95 @@ a:active {
     }
 }
 
-#brands{
-  width: 100%;
-  height: 360px;
-  display: table;
-  & > div{
-    display: table-row;
-    height: 180px;
-    & > div{
-      width: 20%;
-      display: table-cell;
-      border-right: 1px solid rgb(227, 227, 227);
-      border-bottom: 1px solid rgb(227, 227, 227);
-      text-align: center;
-      vertical-align: middle;
-      &:last-child{
-        display: table-cell;
-        border-right: 0px;
-      }
-      img{
-        width: 200px;
-      }
+#brands {
+    width: 100%;
+    height: 360px;
+    display: table;
+
+    & > div {
+        display: table-row;
+        height: 180px;
+
+        & > div {
+            width: 20%;
+            display: table-cell;
+            border-right: 1px solid rgb(227, 227, 227);
+            border-bottom: 1px solid rgb(227, 227, 227);
+            text-align: center;
+            vertical-align: middle;
+
+            &:last-child {
+                display: table-cell;
+                border-right: 0;
+            }
+
+            img {
+                max-width: 70%;
+                max-height: 70%;
+            }
+        }
+
+        &:last-child > div {
+            border-bottom: 0;
+        }
     }
-    &:last-child > div{
-      border-bottom: 0;
+}
+
+#refreshing {
+    height: 460px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+        color: #25737C;
+        font-size: 52px;
     }
-  }
+
+    p {
+        width: 80%;
+        font-size: 22px;
+        margin-top: 20px;
+    }
+}
+
+#table {
+    height: 850px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+
+    & > .block-text {
+        width: 40%;
+    }
+
+    & > .block-img {
+        width: 40%;
+        position: relative;
+    }
+
+    h1 {
+        color: #25737C;
+        font-size: 48px;
+    }
+
+    p {
+        font-size: 22px;
+        margin: 40px 0;
+    }
+
+    .btn-transparent-violet {
+        font-size: 20px;
+        padding: 10px 20px;
+    }
+
+    img {
+        max-height: 800px;
+        position: absolute;
+        top: -400px;
+        left: 30%;
+    }
 }
