--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -12,6 +12,14 @@ body {
     font-size: 14px;
 }
 
+.overlay{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(23, 11, 60, 0.8);
+}
+
 .grey-background {
     background-color: rgb(247, 247, 247);
 }
