--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -10,14 +10,18 @@ body {
     width: 100%;
     height: 100%;
     font-size: 14px;
+
+    & > .container-fluid {
+        padding: 0;
+    }
 }
 
-.overlay{
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(23, 11, 60, 0.8);
+.overlay {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(23, 11, 60, 0.8);
 }
 
 .grey-background {
@@ -58,8 +62,6 @@ body {
         }
     }
 }
-
-
 
 .btn-transparent-violet {
     color: #9F87D2;
@@ -443,8 +445,8 @@ a:active {
                 font-size: 20px;
             }
 
-            .lead{
-              font-size: 28px;
+            .lead {
+                font-size: 28px;
             }
 
             p {
@@ -452,9 +454,63 @@ a:active {
                 margin: 40px auto 0;
                 font-size: 16px;
             }
-            img{
-              width: 124px;
-              height: auto;
+
+            img {
+                width: 124px;
+                height: auto;
+            }
+        }
+    }
+}
+
+#made-easy {
+    padding: 80px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+        color: #4A4A4A;
+        font-size: 52px;
+        margin-top: 0;
+
+        span {
+            color: #0EB1C2;
+        }
+    }
+
+    & > div {
+        margin-top: 60px;
+        display: table;
+        width: 100%;
+
+        & > div {
+            display: table-row;
+
+            & > div {
+                display: table-cell;
+                border-top: 1px solid #E1E1E1;
+                border-left: 1px solid #E1E1E1;
+                padding: 70px;
+                width: 50%;
+
+                &:last-child {
+                    border-right: 1px solid #E1E1E1;
+                }
+
+                & > div {
+                    display: flex;
+
+                    img {
+                        width: 94px;
+                        height: 94px;
+                    }
+
+                    h3{
+                      margin-top: 0;
+                    }
+                }
             }
         }
     }
