--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -464,7 +464,7 @@ a:active {
 }
 
 #made-easy {
-    padding: 80px 0;
+    padding: 80px 0 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -501,10 +501,14 @@ a:active {
 
                 & > div {
                     display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
 
                     img {
                         width: 94px;
                         height: 94px;
+                        margin-right: 30px;
                     }
 
                     h3{
@@ -514,4 +518,8 @@ a:active {
             }
         }
     }
+}
+
+#feedback{
+  padding: 80px 0;
 }
