--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -10,9 +10,25 @@ body {
     width: 100%;
     height: 100%;
     font-size: 14px;
+    color: #4D4D4D;
 
     & > .container-fluid {
         padding: 0;
+    }
+}
+
+h1,
+h2,
+h3,
+p {
+    color: #4D4D4D;
+}
+
+input[type=text], input[type=email], input[type=number] {
+    &.form-control {
+        border-radius: 0;
+        height: 60px;
+        font-size: 24px;
     }
 }
 
@@ -21,7 +37,7 @@ body {
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-color: rgba(23, 11, 60, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .grey-background {
@@ -511,8 +527,8 @@ a:active {
                         margin-right: 30px;
                     }
 
-                    h3{
-                      margin-top: 0;
+                    h3 {
+                        margin-top: 0;
                     }
                 }
             }
@@ -520,23 +536,85 @@ a:active {
     }
 }
 
-#feedback{
-  padding: 80px 0;
+#feedback {
+    padding: 80px 0;
 
-  .row{
-    & > div:first-child{
-      padding-right: 60px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      padding-left: 10%;
+    .row {
+        & > div:first-child {
+            padding-right: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            padding-left: 10%;
+
+            img {
+                margin-top: 180px;
+                width: 90%;
+            }
+        }
+
+        & > div:last-child {
+            padding-left: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            padding-right: 10%;
+        }
+
+        .nav {
+            width: 100%;
+
+            & > li {
+                width: 50%;
+
+                a {
+                    text-align: center;
+                    padding: 30px 50px;
+                    font-size: 24px;
+                    background-color: #F1F1F1;
+                    color: #B5B5B5;
+                    border-bottom: 1px solid #A4A4A4;
+                    border-radius: 0;
+                    margin-right: 0;
+                    border-left: 0;
+                }
+
+                &.active {
+                    a {
+                        background-color: #fff;
+                        color: #B5B5B5;
+                        border: 1px solid #A4A4A4;
+                        border-left: 1px solid #A4A4A4;
+                        border-bottom: 1px solid transparent;
+                        color: #4A4A4A;
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+
+        .tab-content {
+            margin-top: 40px;
+
+            form {
+                margin-top: 40px;
+
+                label {
+                    font-size: 24px;
+                    font-weight: 400;
+                }
+
+                input[type=submit]{
+                  width: 240px;
+                  height: 60px;
+                  background-color: #0EB1C2;
+                  color: #fff;
+                }
+                input[type=submit]{
+                  font-size: 24px;
+                  margin-top: 30px;
+                }
+            }
+        }
     }
-    & > div:last-child{
-      padding-left: 60px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      padding-right: 10%;
-    }
-  }
 }
