--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -224,10 +224,14 @@ a:active {
     #video-elevated {
         h1 {
             font-size: 60px;
+            color: #fff;
+
         }
 
         h2 {
             font-size: 20px;
+            color: #fff;
+
         }
     }
 
@@ -235,7 +239,12 @@ a:active {
         margin-left: auto;
         margin-right: auto;
         width: 827px;
+        color: #fff;
 
+        h3{
+          color: #fff;
+
+        }
         & > div {
             width: 100%;
             display: table;
