--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -3,62 +3,41 @@
 // @import "includes/varibles";
 // @import "includes/mixins";
 // @import "includes/stack";
-
-
 @font-face {
-	font-family: 'Gotham Book';
-	src: url('../fonts/Gotham-Book.eot');
-	src: url('../fonts/Gotham-Book.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Gotham-Book.woff') format('woff'),
-		url('../fonts/Gotham-Book.ttf') format('truetype');
-	font-weight: normal;
-	font-style: italic;
+    font-family: 'Gotham Book';
+    src: url('../fonts/Gotham-Book.eot');
+    src: url('../fonts/Gotham-Book.eot?#iefix') format('embedded-opentype'), url('../fonts/Gotham-Book.woff') format('woff'), url('../fonts/Gotham-Book.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
 }
-
 @font-face {
-	font-family: 'Gotham Bold';
-	src: url('../fonts/Gotham-Bold.eot');
-	src: url('../fonts/Gotham-Bold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Gotham-Bold.woff') format('woff'),
-		url('../fonts/Gotham-Bold.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
+    font-family: 'Gotham Bold';
+    src: url('../fonts/Gotham-Bold.eot');
+    src: url('../fonts/Gotham-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Gotham-Bold.woff') format('woff'), url('../fonts/Gotham-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
-
-
 @font-face {
-	font-family: 'OpenSans Light';
-	src: url('../fonts/OpenSans-Light.eot');
-	src: url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/OpenSans-Light.woff') format('woff'),
-		url('../fonts/OpenSans-Light.ttf') format('truetype');
-	font-weight: 300;
-	font-style: normal;
+    font-family: 'OpenSans Light';
+    src: url('../fonts/OpenSans-Light.eot');
+    src: url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Light.woff') format('woff'), url('../fonts/OpenSans-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
 }
-
 @font-face {
-	font-family: 'OpenSansLight Italic';
-	src: url('../fonts/OpenSansLight-Italic.eot');
-	src: url('../fonts/OpenSansLight-Italic.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/OpenSansLight-Italic.woff') format('woff'),
-		url('../fonts/OpenSansLight-Italic.ttf') format('truetype');
-	font-weight: 300;
-	font-style: italic;
+    font-family: 'OpenSansLight Italic';
+    src: url('../fonts/OpenSansLight-Italic.eot');
+    src: url('../fonts/OpenSansLight-Italic.eot?#iefix') format('embedded-opentype'), url('../fonts/OpenSansLight-Italic.woff') format('woff'), url('../fonts/OpenSansLight-Italic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
 }
-
-
 @font-face {
-	font-family: 'OpenSans Semibold';
-	src: url('../fonts/OpenSans-Semibold.eot');
-	src: url('../fonts/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/OpenSans-Semibold.woff') format('woff'),
-		url('../fonts/OpenSans-Semibold.ttf') format('truetype');
-	font-weight: 600;
-	font-style: normal;
+    font-family: 'OpenSans Semibold';
+    src: url('../fonts/OpenSans-Semibold.eot');
+    src: url('../fonts/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/OpenSans-Semibold.woff') format('woff'), url('../fonts/OpenSans-Semibold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
 }
-
-
-
 
 body {
     font-family: 'OpenSans Light', 'Gotham Book', sans-serif;
@@ -74,16 +53,21 @@ body {
 
 h1,
 h2,
-h3{}
+h3 {}
+
 p {
     color: #4D4D4D;
 }
 
-h1, h2, h3{
-  font-family: 'Gotham Book', 'OpenSans Light', sans-serif
+h1,
+h2,
+h3 {
+    font-family: 'Gotham Book', 'OpenSans Light', sans-serif;
 }
 
-input[type=text], input[type=email], input[type=number] {
+input[type=email],
+input[type=number],
+input[type=text] {
     &.form-control {
         border-radius: 0;
         height: 60px;
@@ -225,7 +209,9 @@ a:active {
         bottom: 0;
         right: 0;
         z-index: -100;
-        width: 100%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
         height: auto;
     }
 
@@ -285,13 +271,11 @@ a:active {
         h1 {
             font-size: 60px;
             color: #fff;
-
         }
 
         h2 {
             font-size: 20px;
             color: #fff;
-
         }
     }
 
@@ -301,10 +285,10 @@ a:active {
         width: 827px;
         color: #fff;
 
-        h3{
-          color: #fff;
-
+        h3 {
+            color: #fff;
         }
+
         & > div {
             width: 100%;
             display: table;
@@ -623,12 +607,12 @@ a:active {
                 width: 90%;
             }
 
-            h1{
-              font-size: 50px;
+            h1 {
+                font-size: 50px;
             }
 
-            p{
-              font-size: 20px;
+            p {
+                font-size: 20px;
             }
         }
 
@@ -683,16 +667,17 @@ a:active {
                     font-weight: 400;
                 }
 
-                input[type=submit]{
-                  width: 240px;
-                  height: 60px;
-                  background-color: #0EB1C2;
-                  color: #fff;
+                input[type=submit] {
+                    width: 240px;
+                    height: 60px;
+                    background-color: #0EB1C2;
+                    color: #fff;
                 }
-                input[type=submit]{
-                  font-size: 26px;
-                  margin-top: 30px;
-                  font-family: 'Gotham Book';
+
+                input[type=submit] {
+                    font-size: 26px;
+                    margin-top: 30px;
+                    font-family: 'Gotham Book';
                 }
             }
         }
