--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -800,6 +800,13 @@ a:active {
         padding: 30px;
     }
 
+    #magic > div > div img {
+        width: auto;
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
+    }
+
     #feedback .row > div:last-child {
         padding: 0;
         margin-top: 50px;
