--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -331,6 +331,11 @@ a:active {
     }
 }
 
+.solutions #top {
+    background-image: url("../img/solutions-bg.jpg");
+    background-size: cover;
+}
+
 #brands {
     padding: 0;
     height: 360px;
@@ -395,8 +400,7 @@ a:active {
 
         img {
             max-height: 800px;
-            position: absolute;
-            top: -400px;
+            position: relative;
             right: 30%;
         }
     }
@@ -412,7 +416,7 @@ a:active {
         }
 
         img {
-            position: absolute;
+            position: relative;
             left: 30%;
         }
     }
@@ -442,21 +446,18 @@ a:active {
 #table {
     img {
         height: 800px;
-        top: -400px;
     }
 }
 
 #people {
     img {
         height: 600px;
-        top: -300px;
     }
 }
 
 #network {
     img {
         height: 600px;
-        top: -300px;
     }
 }
 
