solutions: sn cloud

--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -787,6 +787,15 @@ a:visited {
             height: 450px;
         }
     }
+
+    #sn-cloud{
+      h1{
+        color: #5356BD;
+      }
+      .block-img img {
+          height: 480px;
+      }
+    }
 }
 //////////////////////////////////////////////////////////////////////////////
 @media (max-width: 1200px) {
