--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -407,6 +407,10 @@ a:visited {
         }
     }
 
+    .block-img{
+      display: flex;
+    }
+
     .sn {
         font-size: 30px;
         margin-top: 20px;
@@ -418,6 +422,8 @@ a:visited {
         }
 
         & > .block-img {
+          justify-content: flex-end;
+
             width: 50%;
             position: relative;
             text-align: right;
@@ -436,6 +442,8 @@ a:visited {
         }
 
         & > .block-img {
+          justify-content: flex-start;
+
             width: 50%;
             position: relative;
 
@@ -814,6 +822,28 @@ a:visited {
       .block-img img {
           height: 480px;
       }
+    }
+
+    #sn-pro{
+      h1{
+        color: #0E92C2;
+      }
+      .block-img img {
+          height: 480px;
+      }
+    }
+
+    #sn-producers{
+      h1{
+        color: #0EB1C2;
+      }
+      .block-img img {
+          height: 480px;
+      }
+    }
+
+    #made-easy{
+      padding: 80px 0;
     }
 }
 //////////////////////////////////////////////////////////////////////////////
