--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -740,6 +740,58 @@ a:visited {
         }
     }
 }
+
+.video-brands {
+    margin: 50px auto;
+    width: 90%;
+    display: flex;
+
+    .brand-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-start;
+        width: 50%;
+        padding: 30px;
+
+        img {
+            height: 90px;
+        }
+
+        h4 {
+            font-family: 'OpenSans Semibold';
+            font-size: 20px;
+            line-height: 40px;
+        }
+
+        p {
+            font-size: 20px;
+            line-height: 40px;
+        }
+
+        .btn{
+          margin-top: 10px;
+        }
+    }
+
+    .video-box {
+        width: 50%;
+        padding: 30px;
+
+        & > div {
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+
+            .vjs-big-play-button {
+                top: 50%;
+                left: 50%;
+                margin-top: -22px;
+                margin-left: -45px;
+            }
+        }
+    }
+}
 ///////////////////////////////////////////////////////////////////////////
 
 .solutions {
@@ -862,8 +914,9 @@ a:visited {
 
 .case-studies {
     #top {
-        background-image: url("../img/solutions-bg.jpg");
+        background-image: url("../img/case-studies-bg.jpg");
         background-size: cover;
+        background-position: center;
         height: auto;
 
         & > div > div {
