--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -742,7 +742,8 @@ a:visited {
 }
 
 .video-brands {
-    margin: 50px auto;
+    margin: 0 auto;
+    padding: 150px 0;
     width: 90%;
     display: flex;
 
@@ -755,7 +756,7 @@ a:visited {
         padding: 30px;
 
         img {
-            height: 90px;
+            height: 100px;
         }
 
         h4 {
@@ -781,7 +782,6 @@ a:visited {
         & > div {
             width: 100%;
             height: 100%;
-            background-color: transparent;
 
             .vjs-big-play-button {
                 top: 50%;
@@ -790,6 +790,25 @@ a:visited {
                 margin-left: -45px;
             }
         }
+    }
+
+    &.video-on-right{
+      .video-box{
+        padding-left: 0;
+      }
+      .brand-box{
+        padding-right: 100px;
+      }
+    }
+
+    &.video-on-left{
+      flex-direction: row-reverse;
+      .brand-box{
+        padding-left: 100px;
+      }
+      .video-box{
+        padding-right: 0;
+      }
     }
 }
 ///////////////////////////////////////////////////////////////////////////
