--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -741,10 +741,24 @@ a:visited {
     }
 }
 
+.video-box {
+    & > div {
+        width: 100%;
+        height: 100%;
+
+        .vjs-big-play-button {
+            top: 50%;
+            left: 50%;
+            margin-top: -22px;
+            margin-left: -45px;
+        }
+    }
+}
+
 .video-brands {
-    margin: 0 auto;
+    margin: 0;
     padding: 150px 0;
-    width: 90%;
+    width: 100%;
     display: flex;
 
     .brand-box {
@@ -770,45 +784,72 @@ a:visited {
             line-height: 40px;
         }
 
-        .btn{
-          margin-top: 10px;
+        .btn {
+            margin-top: 10px;
         }
     }
 
     .video-box {
         width: 50%;
         padding: 30px;
+    }
 
-        & > div {
-            width: 100%;
-            height: 100%;
+    &.video-on-right {
+        .video-box {
+            padding-left: 0;
+        }
 
-            .vjs-big-play-button {
-                top: 50%;
-                left: 50%;
-                margin-top: -22px;
-                margin-left: -45px;
+        .brand-box {
+            padding-right: 10%;
+            padding-left: 10%;
+        }
+    }
+
+    &.video-on-left {
+        flex-direction: row-reverse;
+
+        .brand-box {
+            padding-right: 10%;
+            padding-left: 10%;
+        }
+
+        .video-box {
+            padding-right: 0;
+        }
+    }
+}
+
+#featured-videos {
+    border-top: 1px solid #CCCCCC;
+    border-bottom: 1px solid #CCCCCC;
+    text-align: center;
+    padding: 100px 10%;
+    display: flex;
+    flex-direction: column;
+
+    & > div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-top: 50px;
+    }
+
+
+    .featured-video {
+        text-align: left;
+        margin: 5px;
+        width: 30%;
+
+        .video-box {
+            & > div {
+                min-height: 250px;
             }
         }
     }
 
-    &.video-on-right{
-      .video-box{
-        padding-left: 0;
-      }
-      .brand-box{
-        padding-right: 100px;
-      }
-    }
-
-    &.video-on-left{
-      flex-direction: row-reverse;
-      .brand-box{
-        padding-left: 100px;
-      }
-      .video-box{
-        padding-right: 0;
-      }
+    h1 {
+        color: #25737C;
+        font-size: 60px;
     }
 }
 ///////////////////////////////////////////////////////////////////////////
