--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -39,6 +39,10 @@
     font-style: normal;
 }
 
+html, body, .container {
+    height: 100%;
+}
+
 body {
     font-family: 'OpenSans Light', 'Gotham Book', sans-serif;
     width: 100%;
@@ -251,6 +255,12 @@ a:visited {
             }
 
             &.active {
+                a {
+                    font-family: 'Gotham Bold';
+                }
+            }
+
+            &.get-started {
                 background-color: #fff;
                 border-radius: 4px;
                 font-family: 'OpenSans Semibold';
@@ -834,7 +844,6 @@ a:visited {
         margin-top: 50px;
     }
 
-
     .featured-video {
         text-align: left;
         margin: 5px;
@@ -988,6 +997,42 @@ a:visited {
         }
     }
 }
+//////////////////////////////////////////////////////////////////////////////
+
+.login{
+  display: flex;
+  background-image: url(../img/login-background.jpg);
+  background-size: cover;
+  .login-form{
+    margin: auto;
+    background-color: #fff;
+    border: 1ps solid #000;
+    padding: 30px 20px;
+    border-radius: 6px;
+    text-align: center;
+    width: 250px;
+    img{
+      width: 190px;
+    }
+    h1{
+      font-family: 'Gotham Book';
+      font-size: 16px;
+      margin: 10px 0;
+    }
+    form{
+      text-align: left;
+      input[type=email], input[type=password]{
+        height: 30px;
+        font-size: 14px;
+        border-radius: 3px;
+      }
+      input[type=submit]{
+        font-family: 'Gotham Bold';
+      }
+    }
+  }
+}
+
 //////////////////////////////////////////////////////////////////////////////
 @media (max-width: 1200px) {
     #top {
