--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -60,7 +60,7 @@ html {
 }
 
 body {
-    font-family: 'OpenSans Light', 'Gotham Book', sans-serif;
+    font-family: 'Gotham Light', 'OpenSans Light', sans-serif;
     width: 100%;
     height: 100%;
     font-size: 14px;
@@ -380,6 +380,7 @@ a:visited {
     padding: 0;
     height: 360px;
     display: table;
+    margin: auto;
 
     & > div {
         display: table-row;
@@ -874,8 +875,12 @@ a:visited {
 }
 
 #video-modal {
+    .modal-dialog {
+        width: 70%;
+    }
+
     .video-box {
-        min-height: 350px;
+        min-height: 500px;
         height: 1px;
     }
 
@@ -1026,6 +1031,67 @@ a:visited {
             justify-content: space-around;
             align-items: stretch;
             height: 100%;
+        }
+    }
+}
+//////////////////////////////////////////////////////////////////////////////
+
+.featured-videos {
+    #top {
+        background-image: url("../img/login-background.jpg");
+        background-size: cover;
+        background-position: center;
+        height: auto;
+
+        .back {
+            margin-left: 50px;
+            margin-top: 30px;
+            font-size: 22px;
+
+            .fa {
+                font-size: 26px;
+            }
+        }
+
+        #top-video {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-end;
+            padding: 5% 10% 8%;
+
+            .left-text {
+                padding-right: 10%;
+                flex-grow: 1;
+                flex-basis: 30%;
+
+                img {
+                    max-width: 100%;
+                }
+
+                p {
+                    font-size: 30px;
+                    color: #fff;
+                    font-family: 'Gotham Book', sans-serif;
+                    margin-top: 30px;
+                }
+            }
+
+            .right-video {
+                flex-grow: 2;
+                flex-basis: 70%;
+
+                & > div {
+                    width: 100%;
+                    background-color: transparent;
+                    .vjs-big-play-button {
+                        top: 50%;
+                        left: 50%;
+                        margin-top: -22px;
+                        margin-left: -45px;
+                    }
+                }
+            }
         }
     }
 }
