--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -1084,11 +1084,69 @@ a:visited {
                 & > div {
                     width: 100%;
                     background-color: transparent;
+
                     .vjs-big-play-button {
                         top: 50%;
                         left: 50%;
                         margin-top: -22px;
                         margin-left: -45px;
+                    }
+                }
+            }
+        }
+    }
+
+    .content {
+        padding: 50px 10%;
+        display: flex;
+
+        #topline-stats {
+            padding-right: 5%;
+
+            img {
+                margin-bottom: 50px;
+            }
+        }
+
+        #text-sections {
+            div.lead {
+                font-family: 'OpenSans Light', sans-serif;
+                font-size: 50px;
+                line-height: 70px;
+                margin-bottom: 50px;
+            }
+
+            section {
+                margin-top: 30px;
+
+                h2 {
+                    font-size: 38px;
+                    font-family: 'Gotham Book', sans-serif;
+                }
+
+                p {
+                    font-size: 24px;
+                    line-height: 50px;
+                }
+            }
+
+            .featured-videos {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                margin-top: 50px;
+                margin-bottom: 50px;
+                justify-content: space-between;
+
+                .featured-video {
+                    text-align: left;
+                    flex-basis: 32%;
+                    //width: 30%;
+
+                    .video-box {
+                        & > div {
+                            min-height: 250px;
+                        }
                     }
                 }
             }
